--- a/index.html
+++ b/index.html
@@ -8,17 +8,18 @@
 </head>
 <body>
     <nav class="navbar navbar-blend navbar-fixed-top">
-        <div class="row">
-            <div class="col-lg">
-                <form>
-                    <div class="form-group">
-                        <input type="text" class="form-control" id="search" placeholder="Search">
-                    </div>
-                </form>
-            </div>
+        <div class="input-group">
+            <input type="text" class="form-control" id="search" placeholder="Search">
         </div>
     </nav>
-    <div id="chocolate-list" class="container-fluid"></div>
+    <div class="container-fluid">
+		<div class="row">
+			<div class="col">
+				<div id="chocolate-list">
+			</div>
+		</div>
+	</div>
+	</div>
     <nav class="navbar navbar-blend navbar-fixed-bottom">
         <div class="btn-group btn-group-toggle" data-toggle="buttons">
             <label class="btn btn-secondary active">
