Add viewport tag, abbreviate ratings

--- a/index.html
+++ b/index.html
@@ -2,23 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Food Empowerment Project's Chocolate List</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <link rel="stylesheet" href="choclist.css">
 </head>
 <body>
-    <nav class="navbar navbar-blend navbar-fixed-top">
-        <div class="input-group">
-            <input type="text" class="form-control" id="search" placeholder="Search">
-        </div>
-    </nav>
-    <div class="container-fluid">
+  <nav class="navbar navbar-blend navbar-fixed-top">
+      <div class="input-group">
+          <input type="text" class="form-control" id="search" placeholder="Search">
+      </div>
+  </nav>
+  <div class="container">
 		<div class="row">
 			<div class="col">
-				<div id="chocolate-list">
-			</div>
-		</div>
-	</div>
+				<div id="chocolate-list"></div>
+  		</div>
+  	</div>
 	</div>
     <nav class="navbar navbar-blend navbar-fixed-bottom">
         <div class="btn-group btn-group-toggle" data-toggle="buttons">
@@ -26,13 +26,13 @@
                 <input type="radio" name="rating" value="" class="btn btn-secondary" checked>All
             </label>
             <label class="btn btn-secondary">
-                <input type="radio" name="rating" value="success" class="btn btn-secondary">Recommended
+                <input type="radio" name="rating" value="success" class="btn btn-secondary">R
             </label>
             <label class="btn btn-secondary">
-                <input type="radio" name="rating" value="danger" class="btn btn-secondary">Not Recommended
+                <input type="radio" name="rating" value="danger" class="btn btn-secondary">NR
             </label>
             <label class="btn btn-secondary">
-                <input type="radio" name="rating" value="warning" class="btn btn-secondary">Mixed
+                <input type="radio" name="rating" value="warning" class="btn btn-secondary">M
             </label>
         </div>
     </nav>
